<resources>
    <string name="app_name">FoodIST</string>
    <string name="language">language</string>
    <string name="global_preferences_file">global_preferences</string>
    <string name="global_preferences_location">global_preferences</string>
    <string name="campus_taguspark">TagusPark</string>
    <string name="campus_alameda">Alameda</string>
    <string name="map_on_direction_failure">Could not get directions to food service</string>
    <string name="map_no_internet_connection">No internet or location permission: cannot show directions to service</string>
    <string name="add_menu_dish_name">Dish Name</string>
    <string name="add_menu_cost">Cost</string>
    <string name="add_menu_done">Done</string>
    <string name="add_menu_food_type">Constraints</string>
    <string name="add_menu_type_vegetarian">Vegetarian</string>
    <string name="add_menu_type_vegan">Vegan</string>
    <string name="add_menu_type_fish">Fish</string>
    <string name="add_menu_type_meat">Meat</string>
    <string name="add_menu_invalid_input_toast">Give the menu a name and a cost!</string>
    <string name="add_menu_no_internet_access_toast">Device is not online! Please check your connection</string>
    <string name="add_menu_camera_failure_toast">Unable to get photo taken from camera</string>
    <string name="campus1">Taguspark</string>
    <string name="campus2">Alameda</string>
    <string name="food_menu_dish_name">Dish Name</string>
    <string name="food_menu_cost">Cost</string>
    <string name="food_menu_rating">Rating</string>
    <string name="food_menu_number_photos">No Photos Available</string>
    <string name="food_menu_previous_photo">Previous Photo</string>
    <string name="food_menu_next_photo">Next Photo</string>
    <string name="food_menu_add_rating">Add Rating</string>
    <string name="food_menu_add_photos">Add Photos</string>
    <string name="food_menu_photos">Menu Photos</string>
    <string name="food_menu_no_photos_available_toast">No photos available for this menu</string>
    <string name="food_menu_photo_upload_no_internet_failure_toast">Cannot upload photo without internet</string>
    <string name="food_menu_rating_upload_no_internet_failure_toast">Cannot upload rating without internet</string>
    <string name="food_menu_name_failure_toast">Unable to obtain menu name</string>
    <string name="food_menu_cost_failure_toast">Unable to obtain menu cost</string>
    <string name="food_menu_camera_failure_toast">Unable to get photo taken from camera</string>
    <string name="food_menu_download_photo_failure_toast">Cannot download menu photo without network connection</string>
    <string name="food_menu_update_menu_failure_toast">Cannot update menu without network connection</string>
    <string name="food_menu_upload_photo_failure_toast">Cannot upload menu photo without network connection</string>
    <string name="food_service_name">Food Service Name</string>
    <string name="food_service_rating">Food Service Rating</string>
    <string name="food_service_opening_time">Open Hours: Unknown</string>
    <string name="food_service_queue_time">Queue Time</string>
    <string name="food_service_add_menu">Add Menu</string>
    <string name="food_service_working_hours">Working Hours:</string>
    <string name="food_service_menu_update_failure_toast">No internet connection, cannot get menus</string>
    <string name="food_service_show_all_menus">Filter menus i\'m not interested in</string>
    <string name="food_service_filter_menus">Filter menus</string>
    <string name="histogram_user_ratings">"User ratings</string>
    <string name="histogram_no_data">No histogram data available</string>
    <string name="main_user_profile">User Profile</string>
    <string name="main_change_campus">Change Campus</string>
    <string name="main_no_selected_campus_failure_toast">Could not get location, please select campus</string>
    <string name="main_infering_location_failure_toast">Could not infer campus as no network and/or location is avaliable, please insert it manually</string>
    <string name="main_update_walking_distance_failure_toast">Could not get services walking time as there is no location permission and/or no Internet</string>
    <string name="main_walking_time">Walking Time</string>
    <string name="main_queue_time">Queue Time</string>
    <string name="profile_username">Username</string>
    <string name="profile_profession">Profession</string>
    <string name="profile_student">Student</string>
    <string name="profile_professor">Professor</string>
    <string name="profile_staff">Staff</string>
    <string name="profile_visitor">Public</string>
    <string name="profile_researcher">Researcher</string>
    <string name="profile_language">Language</string>
    <string name="profile_language_option_english">English</string>
    <string name="profile_language_option_portuguese">Portuguese</string>
    <string name="profile_dietary_constraints">Dietary Constraints</string>
    <string name="profile_dietary_vegetarian">Vegetarian</string>
    <string name="profile_dietary_meat">Meat</string>
    <string name="profile_dietary_fish">Fish</string>
    <string name="profile_dietary_vegen">Vegan</string>
    <string name="shared_prefs_profile_username">Username</string>
    <string name="shared_prefs_profile_profession">Profession</string>
    <string name="shared_prefs_profile_language">Language</string>
    <string name="shared_prefs_profile_dietary_meat">Meat</string>
    <string name="shared_prefs_profile_dietary_fish">Fish</string>
    <string name="shared_prefs_profile_dietary_vegetarian">Vegetarian</string>
    <string name="shared_prefs_profile_dietary_vegan">Vegan</string>
    <string name="shared_prefs_flagged_photo_key">Flagged-photo-%1$s-%2$s</string>
    <string name="shared_prefs_flagged_menu_key">Flagged-menu-%1$s-%2$s</string>
    <string name="shared_prefs_ratings_file">ratings_file</string>
    <string name="shared_prefs_rated_menu_key">Rated-menu-%1$s-%2$s</string>
    <string name="profile_file">profile</string>
    <string name="flag_file">flags</string>
    <string name="profile_position_name">Position Name</string>
    <string name="profile_position_camera_failure_toast">Unable to get photo taken from camera</string>
    <string name="profile_user_photo">User Photo</string>
    <string name="profile_position">Position</string>
    <string name="profile_language_chosen">Language</string>
    <string name="choose_language_english">English</string>
    <string name="choose_language_portuguese">Português</string>
    <string name="get_menu_task_error_getting_menus_message">Unable to get menus from server</string>
    <string name="get_menu_task_no_menus_available_message">No menus available for this service</string>
    <string name="get_menu_filter_menu_message">Some menus may have been filtered according to your dietary constraints</string>
    <string name="download_photo_task_error_message">Unable to download photo, check connection</string>
    <string name="guess_campus_task_impossible_message">Unable to guess campus from current location</string>
    <string name="service_walking_time_unable_calculate_time">Unable to calculate food services walking time</string>
    <string name="upload_photo_task_complete_message">Upload of photo completed</string>
    <string name="map_api_key">AIzaSyCwTYl8KmYZE3J4vSQj7AMm2Hdk1RhjnyQ</string>
    <string name="map_alameda">Instituto+Superior+Técnico</string>
    <string name="map_taguspark">Instituto+Superior+Técnico+-+Taguspark</string>
    <string name="foodist_server_address">10.0.2.2</string>
    <string name="foodist_server_port">9000</string>
    <string name="language_first_boot">firstBoot</string>
    <string name="food_service_walking_distance">"Walking Distance: "</string>
    <string name="fullscreen_map_time">Distance: %1$s</string>
    <string name="seconds"> seconds </string>
    <string name="minutes"> minutes </string>
    <string name="hours"> hours </string>
    <string name="days"> days </string>
    <string name="second"> second </string>
    <string name="minute"> minute </string>
    <string name="hour"> hour </string>
    <string name="day"> day </string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="profile_login">Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="edit">Edit</string>
    <string name="check_preferece_warning">Must have at least one preference</string>
    <string name="commit_text_edit">Save Changes</string>
    <string name="translate_menu_names">Translate Menu Names</string>
    <string name="username_exists_message">Username already exists</string>
    <string name="unknown_error_message">An unknown error occurred</string>
    <string name="cookie_pref_key">Cookie-Key</string>
    <string name="non_empty_login_params_message">Need a non empty username and password</string>
    <string name="register_success_message">Register Success</string>
    <string name="register_no_connection_message">Cannot register without internet connection</string>
    <string name="username_not_logged_in">Username</string>
    <string name="login_successful_message">Login successful</string>
    <string name="login_error_message">Could not login with values provided</string>
    <string name="cannot_login_network_message">Cannot log in without a network connection</string>
    <string name="must_be_login_photo_message">Must be logged in to upload a photo</string>
    <string name="require_login_add_menu_message">Must be logged in to add a menu</string>
    <string name="give_menu_type_message">Give the menu a type!</string>
    <string name="not_logged_in_text">Not Logged In</string>
    <string name="logout_error_message">Could not logout</string>
    <string name="logout_successful_message">Logout successful</string>
    <string name="logout_button_message">Logout</string>
    <string name="logout_no_connection_message">Cannot logout without a network connection</string>
    <string name="could_not_change_profile_message">Could not change profile</string>
    <string name="edit_no_conn_message">Must have network connection to edit profile</string>
    <string name="profile_synched_mesage">Profile synced with server</string>
    <string name="must_login_message">Must login to perform this action</string>
    <string name="login_dialog_positive_message">login</string>
    <string name="login_dialog_negative_message">No thanks</string>
    <string name="Menu_uploaded_successfully_message">Menu uploaded successfully</string>
    <string name="menu_upload_error_message">Menu unable to be uploaded (does it already exist?)</string>
    <string name="flag_photo_button_text">Flag Photo</string>
    <string name="flag_photo_error_message">Unable to flag menu</string>
    <string name="no_internet_conn_flag_photo_error">Need network connection to flag photo</string>
    <string name="photo_flag_successfull_message">Photo flagged successfully</string>
    <string name="flag_menu_button_text">Flag menu</string>
    <string name="flag_menu_no_conn_erro_message">Cannot flag menu without internet connection</string>
    <string name="flag_food_menu_error_message">Could not flag menu</string>
    <string name="flag_food_menu_success_message">Menu flagged successfully</string>
    <string name="shared_prefs_user_uuid">UUID</string>
    <string name="no_network_avaliable_queue_time_message">Could not get queue time as there is no network avaliable</string>
    <string name="could_not_get_queue_time_message">Could not get services queue time</string>
    <string name="rate_this_menu_text">Rate this menu:</string>
    <string name="campus3">CTN</string>
    <string name="campus_ctn">CTN</string>
    <string name="rate_menu_test">Unable to rate menu</string>
    <string name="rate_menu_error_string">Error rating menu</string>
</resources>