<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChooseCampusActivity">


    <Button
        android:id="@+id/taguspark"
        android:layout_width="149dp"
        android:layout_height="86dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="108dp"
        android:text="@string/campus1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/alameda"
        android:layout_width="149dp"
        android:layout_height="86dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="100dp"
        android:text="@string/campus2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taguspark" />

    <Button
        android:id="@+id/ctn"
        android:layout_width="149dp"
        android:layout_height="86dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="100dp"
        android:text="@string/campus3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alameda" />
</androidx.constraintlayout.widget.ConstraintLayout>